--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 
+*{
+  box-sizing: border-box;
+}
+
 :root {
   --grid-cols: 1;
   --grid-rows: 1;
@@ -9,16 +13,16 @@
   box-sizing: border-box;
 }
 
-.toggleBar{
- 
-}
 
+/* Wrapper for entire content, flexBox */ 
 .wrapper{
   display: flex; 
   flex-wrap: wrap; 
   margin: auto; 
   justify-content: space-evenly; 
 }
+
+
 
 h1 {
   display: block;
@@ -27,17 +31,42 @@ h1 {
   text-align: center; 
 }
 
+/* Using CSS:grid for the rows and columns number, psuedo selectors used in CSS */ 
+
 #container {
   display: grid;
   grid-gap: 1em;
   align-self: center; 
   grid-template-rows: repeat(var(--grid-rows), 1em);
   grid-template-columns: repeat(var(--grid-cols), 1em);
+  margin: 2em; 
+  max-width: 
  
 }
 
 .grid-item {
   padding: 1em;
-  border: 1px solid #ddd;
+  border: 0.15em solid #ddd;
   text-align: center;
 }
+
+
+/* Toggle bar starts here */ 
+/* Toggle bar for selecting colors, grid size and other toggle effects. */
+
+.toggleBar{
+  display: block;
+}
+
+.grid-size-selector {
+  height: 2em;
+  width: auto; 
+  margin: 2em; 
+  text-align: center;
+  padding: 0.5em; ;
+}
+
+#grid-size-selector50{
+  background-color: red;
+}
+
