--- a/index.css
+++ b/index.css
@@ -42,11 +42,11 @@ h1 {
 }
 
 .grid-item {
+  display:flex;
   padding: 1em;
   margin: 0;
   border: 0.15em solid #ddd;
   text-align: center;
-  flex: 1 1 auto;
 }
 
 
