--- a/index.css
+++ b/index.css
@@ -35,17 +35,18 @@ h1 {
   display: grid;
   grid-gap: 1em; 
   align-self: center; 
-  grid-template-rows: repeat(var(--grid-rows), 1em);
-  grid-template-columns: repeat(var(--grid-cols), 1em);
+  grid-template-rows: repeat(var(--grid-rows), 1fr);
+  grid-template-columns: repeat(var(--grid-cols), 1fr);
   margin: 2em; 
- 
+  width: 400px; 
+  height: 400px;
 }
 
 .grid-item {
   display:flex;
   padding: 1em;
   margin: 0;
-  border: 0.15em solid #ddd;
+  border: 1px solid #ddd;
   text-align: center;
 }
 
