--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 :root {
   --grid-cols:1 ;
-  --grid-rows: 1;
+  --grid-rows:1;
 }
 
 
@@ -26,20 +26,24 @@ h1 {
 
 /* Using CSS:grid for the rows and columns number, psuedo selectors used in CSS */ 
 
-#container {
-  display: grid;
-  grid-template-rows: repeat(var(--grid-rows), 1fr);
-  grid-template-columns: repeat(var(--grid-cols), 1fr);
-  margin: 2em; 
-  width:580px; 
-  height:580px; 
-  overflow: hidden;
+#container{
+  margin-top: 50px;
+  display: inline-grid;
+  grid-template-columns: repeat(16, 2fr);
+  grid-template-rows: repeat(16, 2fr);
+  border: 5px solid white;
+  border-radius: 5px;
+  height: 575px;
+  width: 575px;
+  background-color: gray;
+  box-shadow: 10px 10px;
 }
 
 .grid-item {
-  margin: 0;
   border: 1px solid #ddd;
-  text-align: center;
+  display: inline-block;
+  overflow: hidden;
+  background-color: white;
 }
 
 
@@ -47,18 +51,18 @@ h1 {
 /* Toggle bar for selecting colors, grid size and other toggle effects. */
 
 .toggleBar{
-  display: block;
-}
-
-.grid-size-selector {
-  height: 2em;
-  width: auto; 
-  margin: 2em; 
+  display: flex;
+  flex-direction: column;
+  border-style: dashed;
+  border-color: black;
+  border-radius: 2em;
+  width: auto;
+  padding: 2em; 
   text-align: center;
-  padding: 0.5em; ;
 }
 
-#grid-size-selector40{
-  background-color: red;
-}
+#color-selector {
+  position: relative;
+  margin: auto;
 
+}
