--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ body {
   display: flex; 
   flex-wrap: wrap; 
   margin: auto; 
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
+  align-items: center; 
 }
 
 h1 {
@@ -60,6 +61,7 @@ h1 {
   width: auto;
   padding: 2em; 
   text-align: center;
+  height: 575px;
 }
 
 #color-selector {
@@ -70,4 +72,12 @@ h1 {
 #grid-size-selector {
   position: relative;
   margin: 2em auto;
+}
+
+#eraser-btn {
+  margin: 2em;
+}
+
+#resetbtn { 
+  margin: 2em;
 }
